--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                             <option value="normal" id="normal">Normal</option>
                             <option value="dificil" id="dificil">Difícil</option>
                             <option value="chucknorris" id="chuckNoia">Chuck Norris</option>
+                            <option value="entaotueobonzao" id="entaotueobonzao">O BONZÃO</option>
                         </select>
                     </div>
                 </div>
